@startuml sistema
class Vehiculo {
  - marca: str
  + __init__(marca: str)
}

class Coche {
  - modelo: str
  + __init__(marca: str, modelo: str, motor: Motor)
}

class Camion {
  - carga_maxima: float
  + __init__(marca: str, carga_maxima: float, motor: Motor)
}

class Motor {
  - tipo: str
  + __init__(tipo: str)
}

Vehiculo <|-- Coche
Vehiculo <|-- Camion
Coche *-- Motor
Camion *-- Motor
@enduml